# BioMANIA-Server

./: .env.template  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yaml
cellid-template/: conf.json  index.html.j2
router/: files.py  tasks.py
src/: constants.py  conversation_manager.py  conversation_session.py  datatypes.py  file_operations.py  log_utils.py  task_database.py  token_usage_database.py  utils.py
tests/: conftest.py  test_conversation_manager.py  test_conversation_session.py  test_convert_ipynb_to_html.py  test_file_operations.py  test_task_database.py  test_uploadedfile_database.py
tests/data/: demo.ipynb
